# newsletter-app

./: .gitignore  README.md  add_company.py  app.py  companies.csv  drop_table.py  pyproject.toml  read_mail.py  test_db.ipynb
.streamlit/: config.toml
email/: read_mail.py
modules/: company.py  newsletter.py
utils/: handle_db.py  resize_company_logo.py
