[tool.poetry]
name = "newsletter-app"
version = "0.1.0"
description = ""
authors = ["Nicolas Neudeck <nicolas.neudeck@outlook.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.9.7 || >3.9.7,<4.0"
streamlit = "^1.24.1"
yfinance = "^0.2.25"
imap-tools = "^1.0.0"
python-dotenv = "^1.0.0"
matplotlib = "^3.7.2"
seaborn = "^0.12.2"
wordcloud = "^1.9.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
